[tool.poetry]
name = "open-tokeniser"
version = "0.1.0"
description = ""
authors = ["Jack <i@jackpan.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
tiktoken = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
